theme.css
/* ... */
@media (hover: hover) {
  .metadata-properties-heading:hover,
  .embedded-backlinks .backlink-pane .tree-item-self:hover,
  .graph-controls .graph-control-section .tree-item-self:hover,
  .mod-collapsible:hover,
  .search-result-file-title:hover,
  .style-settings-heading:hover {
    color: var(--nav-item-color-hover);
    background-color: var(--nav-item-background-hover);
    font-weight: var(--font-medium);
  }
}
.mod-collapsible > .tree-item-inner {
  padding-inline-start: 0;
}
.metadata-properties-heading:before {
  /* Override absolute positioning from app, so we're consistent with other collapsibles */
  position: static;
}
.metadata-properties-heading .collapse-indicator,
.embedded-backlinks .backlink-pane .tree-item-self .collapse-icon,
.graph-controls .graph-control-section .collapse-icon,
.tree-item-self .tree-item-icon.collapse-icon {
  color: var(--theme-color-control);
  display: flex;
  left: inherit;
  opacity: var(--icon-opacity);
  padding: 0;
  position: relative;
  width: 1em;
  margin: 0;
  align-items: center;
  justify-content: center;
}
.metadata-properties-heading .metadata-properties-title,
.embedded-backlinks .backlink-pane .tree-item-self .tree-item-inner,
.graph-controls .graph-control-section .tree-item-inner {
  font-size: var(--font-ui-smaller);
  font-weight: var(--font-medium);
}
@media (hover: hover) {
  .metadata-properties-heading:hover .collapse-indicator svg.svg-icon,
  .embedded-backlinks
    .backlink-pane
    .tree-item-self:hover
    .collapse-icon
    svg.svg-icon,
  .graph-controls
    .graph-control-section
    .tree-item-self:hover
    .collapse-icon
    svg.svg-icon,
  .mod-collapsible:hover .collapse-icon svg.svg-icon,
  .search-result-file-title:hover .collapse-icon svg.svg-icon,
  .tree-item-self:hover .tree-item-icon.collapse-icon svg.svg-icon,
  .tree-item-self:hover .menu-item-icon svg.svg-icon {
    color: var(--theme-color-controlHover);
  }
}
.backlink-pane > .tree-item-self .collapse-icon,
.outgoing-link-pane > .tree-item-self .collapse-icon {
  display: block;
  margin-left: 0;
  position: relative;
}
.metadata-properties-heading .collapse-indicator svg,
.embedded-backlinks .backlink-pane .tree-item-self .tree-item-icon svg,
.graph-controls .graph-control-section .collapse-icon svg {
  color: var(--theme-color-control);
}
.mod-root .metadata-content,
.backlink-pane .search-result-container,
.backlink-pane .search-result-file-matches,
.outgoing-link-pane .search-result-container,
.graph-control-section .tree-item-children {
  margin: 0 1em 1em 1em;
  font-size: var(--font-ui-small);
  padding-left: var(--nav-item-children-padding-left);
  padding: 0 0 0 var(--nav-item-children-padding-left);
  margin: 0 0 0 var(--nav-item-children-margin-left);
  border-left: var(--nav-indentation-guide-width) solid
    var(--nav-indentation-guide-color);
}
/* #endregion */
/* #region   Obsidian UI Checkboxes */
.checkbox-container {
  background-color: var(--background-input);
}
.checkbox-container.is-enabled {
  background-color: var(--interactive-accent);
}
input[type="checkbox"] {
  border: var(--theme-length-checkboxBorderWidth) solid
    var(--checkbox-border-color);
}
input[type="checkbox"]:checked:after {
  /* Scale check mark with container in slides */
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
@media (hover: hover) {
  input[type="checkbox"]:hover {
    background-color: var(--theme-color-controlUIHover);
  }
}
/* #endregion */
/* #region   Obsidian UI Radio buttons */
input[type="radio"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--background-input);
  border-radius: 100%;
  border: var(--theme-length-checkboxBorderWidth) solid
    var(--checkbox-border-color);
  box-sizing: border-box;
  color: var(--checkbox-border-color);
  display: inline-grid;
  font: inherit;
  height: 1.15em;
  margin: 0;
  place-content: center;
  transform: translateY(calc(-0.5 * var(--theme-length-checkboxBorderWidth)));
  width: 1.15em;
}
input[type="radio"]::before {
  content: "";
  width: 0.65em;
  height: 0.65em;
  border-radius: 100%;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  background-color: CanvasText;
  /* Use box-shadow as background-color doesn't print well */
  box-shadow: inset 1em 1em var(--checkbox-color);
}
input[type="radio"]:checked::before {
  transform: scale(1);
}
input[type="radio"]:focus {
  border: var(--theme-length-checkboxBorderWidth) solid
    var(--background-modifier-border-focus);
}
@media (hover: hover) {
  input[type="radio"]:hover {
    background-color: var(--theme-color-controlUIHover);
  }
}
/*   #endregion */
/* #region   Item lists */
@media (hover: hover) {
  body:not(.is-grabbing) .tree-item-self.is-clickable:hover,
  .horizontal-tab-nav-item:hover,
  .vertical-tab-nav-item:hover {
    color: var(--nav-item-color-hover);
    background-color: var(--nav-item-background-hover);
    font-weight: var(--nav-item-weight-hover);
  }
}
.horizontal-tab-nav-item.is-active,
.vertical-tab-nav-item.is-active,
.nav-file-title.is-active,
.nav-folder-title.is-active {
  background-color: var(--interactive-accent);
  color: var(--nav-item-color-active);
}
.nav-folder.is-being-dragged-over {
  animation: 0.5s 1 alternate fadein;
  border-radius: var(--radius-s);
  border: solid 0.125rem var(--theme-color-dragTarget);
  background-color: var(--theme-color-dragTargetBg);
}
@media (hover: hover) {
  body:not(.is-grabbing) .tree-item.nav-file .tree-item-self.is-active:hover,
  .horizontal-tab-nav-item.is-active:hover,
  .vertical-tab-nav-item.is-active:hover,
  .nav-file-title.is-active:hover,
  .nav-folder-title.is-active:hover {
    background-color: var(--interactive-accent);
    color: var(--nav-item-color-active);
  }
}
.nav-folder-title {
  font-weight: var(--font-medium);
}
.nav-file-title,
.nav-folder-title {
  padding: 0;
}
.tree-item-inner {
  padding: var(--nav-item-padding);
}
.nav-file-title:before {
  content: none;
}
/* ... */

